--- a/css/style.css
+++ b/css/style.css
@@ -209,30 +209,29 @@ button {
 }
 
 
+.btn-outline-secondary {
+    margin-left: 15px;
+}
+
 /* banner bg main start */
 
 .banner_bg_main {
     width: 100%;
     float: left;
-    background-image: url(../images/BHome.png);
+    /* background-image: url(../images/BHome.png); */
     height: auto;
-    background-size: 100%;
     background-repeat: no-repeat;
-}
-
-.img-fluid {
-    width: 100%;
-    float: left;
-    height: auto;
     background-size: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-position:top;
+    
 }
-
 /* banner bg main end */
 
 /* header top section start */
 
+.form-switch .form-check-input {
+    margin-left: -3.2em;
+}
 .header_section_top {
     width: 100%;
     float: left;
